@@ -669,8 +669,8 @@ name|Resource
 name|maxAMResource
 parameter_list|)
 function_decl|;
-comment|/**    * Get headroom by calculating the min of<code>clusterAvailable</code> and    * (<code>queueFairShare</code> -<code>queueUsage</code>) resources that are    * applicable to this policy. For eg if only memory then leave other    * resources such as CPU to same as clusterAvailable.    *    * @param queueFairShare fairshare in the queue    * @param queueUsage resources used in the queue    * @param clusterAvailable available resource in cluster    * @return calculated headroom    */
-DECL|method|getHeadroom (Resource queueFairShare, Resource queueUsage, Resource clusterAvailable)
+comment|/**    * Get headroom by calculating the min of<code>clusterAvailable</code> and    * (<code>queueFairShare</code> -<code>queueUsage</code>) resources that are    * applicable to this policy. For eg if only memory then leave other    * resources such as CPU to same as clusterAvailable.    *    * @param queueFairShare fairshare in the queue    * @param queueUsage resources used in the queue    * @param maxAvailable available resource in cluster for this queue    * @return calculated headroom    */
+DECL|method|getHeadroom (Resource queueFairShare, Resource queueUsage, Resource maxAvailable)
 specifier|public
 specifier|abstract
 name|Resource
@@ -683,7 +683,7 @@ name|Resource
 name|queueUsage
 parameter_list|,
 name|Resource
-name|clusterAvailable
+name|maxAvailable
 parameter_list|)
 function_decl|;
 block|}
