@@ -457,7 +457,7 @@ return|;
 block|}
 annotation|@
 name|Override
-DECL|method|getHeadroom (Resource queueFairShare, Resource queueUsage, Resource clusterAvailable)
+DECL|method|getHeadroom (Resource queueFairShare, Resource queueUsage, Resource maxAvailable)
 specifier|public
 name|Resource
 name|getHeadroom
@@ -469,7 +469,7 @@ name|Resource
 name|queueUsage
 parameter_list|,
 name|Resource
-name|clusterAvailable
+name|maxAvailable
 parameter_list|)
 block|{
 name|int
@@ -523,7 +523,7 @@ name|Math
 operator|.
 name|min
 argument_list|(
-name|clusterAvailable
+name|maxAvailable
 operator|.
 name|getMemory
 argument_list|()
@@ -535,7 +535,7 @@ name|Math
 operator|.
 name|min
 argument_list|(
-name|clusterAvailable
+name|maxAvailable
 operator|.
 name|getVirtualCores
 argument_list|()
