@@ -1251,6 +1251,21 @@ argument_list|)
 decl_stmt|;
 specifier|final
 name|Resource
+name|queueMaxResources
+init|=
+name|Resource
+operator|.
+name|newInstance
+argument_list|(
+literal|5
+operator|*
+literal|1024
+argument_list|,
+literal|3
+argument_list|)
+decl_stmt|;
+specifier|final
+name|Resource
 name|queueFairShare
 init|=
 name|Resources
@@ -1259,7 +1274,7 @@ name|createResource
 argument_list|(
 literal|4096
 argument_list|,
-literal|4
+literal|2
 argument_list|)
 decl_stmt|;
 specifier|final
@@ -1270,9 +1285,35 @@ name|Resource
 operator|.
 name|newInstance
 argument_list|(
-literal|1024
+literal|2048
 argument_list|,
-literal|1
+literal|2
+argument_list|)
+decl_stmt|;
+specifier|final
+name|Resource
+name|queueStarvation
+init|=
+name|Resources
+operator|.
+name|subtract
+argument_list|(
+name|queueFairShare
+argument_list|,
+name|queueUsage
+argument_list|)
+decl_stmt|;
+specifier|final
+name|Resource
+name|queueMaxResourcesAvailable
+init|=
+name|Resources
+operator|.
+name|subtract
+argument_list|(
+name|queueMaxResources
+argument_list|,
+name|queueUsage
 argument_list|)
 decl_stmt|;
 specifier|final
@@ -1296,9 +1337,22 @@ name|Resources
 operator|.
 name|createResource
 argument_list|(
-literal|6144
+literal|2048
 argument_list|,
 literal|2
+argument_list|)
+decl_stmt|;
+specifier|final
+name|Resource
+name|clusterAvailable
+init|=
+name|Resources
+operator|.
+name|subtract
+argument_list|(
+name|clusterResource
+argument_list|,
+name|clusterUsage
 argument_list|)
 decl_stmt|;
 specifier|final
@@ -1314,43 +1368,21 @@ operator|.
 name|class
 argument_list|)
 decl_stmt|;
-name|ApplicationAttemptId
-name|applicationAttemptId
-init|=
-name|createAppAttemptId
-argument_list|(
-literal|1
-argument_list|,
-literal|1
-argument_list|)
-decl_stmt|;
-name|RMContext
-name|rmContext
-init|=
-name|resourceManager
+name|Mockito
 operator|.
-name|getRMContext
-argument_list|()
-decl_stmt|;
-name|FSAppAttempt
-name|schedulerApp
-init|=
-operator|new
-name|FSAppAttempt
+name|when
 argument_list|(
-name|mockScheduler
-argument_list|,
-name|applicationAttemptId
-argument_list|,
-literal|"user1"
-argument_list|,
 name|mockQueue
-argument_list|,
-literal|null
-argument_list|,
-name|rmContext
+operator|.
+name|getMaxShare
+argument_list|()
 argument_list|)
-decl_stmt|;
+operator|.
+name|thenReturn
+argument_list|(
+name|queueMaxResources
+argument_list|)
+expr_stmt|;
 name|Mockito
 operator|.
 name|when
@@ -1426,20 +1458,42 @@ argument_list|(
 name|fakeRootQueueMetrics
 argument_list|)
 expr_stmt|;
-name|int
-name|minClusterAvailableMemory
+name|ApplicationAttemptId
+name|applicationAttemptId
 init|=
-literal|2048
+name|createAppAttemptId
+argument_list|(
+literal|1
+argument_list|,
+literal|1
+argument_list|)
 decl_stmt|;
-name|int
-name|minClusterAvailableCPU
+name|RMContext
+name|rmContext
 init|=
-literal|6
+name|resourceManager
+operator|.
+name|getRMContext
+argument_list|()
 decl_stmt|;
-name|int
-name|minQueueAvailableCPU
+name|FSAppAttempt
+name|schedulerApp
 init|=
-literal|3
+operator|new
+name|FSAppAttempt
+argument_list|(
+name|mockScheduler
+argument_list|,
+name|applicationAttemptId
+argument_list|,
+literal|"user1"
+argument_list|,
+name|mockQueue
+argument_list|,
+literal|null
+argument_list|,
+name|rmContext
+argument_list|)
 decl_stmt|;
 comment|// Min of Memory and CPU across cluster and queue is used in
 comment|// DominantResourceFairnessPolicy
@@ -1469,9 +1523,41 @@ name|verifyHeadroom
 argument_list|(
 name|schedulerApp
 argument_list|,
-name|minClusterAvailableMemory
+name|min
+argument_list|(
+name|queueStarvation
+operator|.
+name|getMemory
+argument_list|()
 argument_list|,
-name|minQueueAvailableCPU
+name|clusterAvailable
+operator|.
+name|getMemory
+argument_list|()
+argument_list|,
+name|queueMaxResourcesAvailable
+operator|.
+name|getMemory
+argument_list|()
+argument_list|)
+argument_list|,
+name|min
+argument_list|(
+name|queueStarvation
+operator|.
+name|getVirtualCores
+argument_list|()
+argument_list|,
+name|clusterAvailable
+operator|.
+name|getVirtualCores
+argument_list|()
+argument_list|,
+name|queueMaxResourcesAvailable
+operator|.
+name|getVirtualCores
+argument_list|()
+argument_list|)
 argument_list|)
 expr_stmt|;
 comment|// Fair and Fifo ignore CPU of queue, so use cluster available CPU
@@ -1501,9 +1587,38 @@ name|verifyHeadroom
 argument_list|(
 name|schedulerApp
 argument_list|,
-name|minClusterAvailableMemory
+name|min
+argument_list|(
+name|queueStarvation
+operator|.
+name|getMemory
+argument_list|()
 argument_list|,
-name|minClusterAvailableCPU
+name|clusterAvailable
+operator|.
+name|getMemory
+argument_list|()
+argument_list|,
+name|queueMaxResourcesAvailable
+operator|.
+name|getMemory
+argument_list|()
+argument_list|)
+argument_list|,
+name|Math
+operator|.
+name|min
+argument_list|(
+name|clusterAvailable
+operator|.
+name|getVirtualCores
+argument_list|()
+argument_list|,
+name|queueMaxResourcesAvailable
+operator|.
+name|getVirtualCores
+argument_list|()
+argument_list|)
 argument_list|)
 expr_stmt|;
 name|Mockito
@@ -1532,11 +1647,74 @@ name|verifyHeadroom
 argument_list|(
 name|schedulerApp
 argument_list|,
-name|minClusterAvailableMemory
+name|min
+argument_list|(
+name|queueStarvation
+operator|.
+name|getMemory
+argument_list|()
 argument_list|,
-name|minClusterAvailableCPU
+name|clusterAvailable
+operator|.
+name|getMemory
+argument_list|()
+argument_list|,
+name|queueMaxResourcesAvailable
+operator|.
+name|getMemory
+argument_list|()
+argument_list|)
+argument_list|,
+name|Math
+operator|.
+name|min
+argument_list|(
+name|clusterAvailable
+operator|.
+name|getVirtualCores
+argument_list|()
+argument_list|,
+name|queueMaxResourcesAvailable
+operator|.
+name|getVirtualCores
+argument_list|()
+argument_list|)
 argument_list|)
 expr_stmt|;
+block|}
+DECL|method|min (int value1, int value2, int value3)
+specifier|private
+specifier|static
+name|int
+name|min
+parameter_list|(
+name|int
+name|value1
+parameter_list|,
+name|int
+name|value2
+parameter_list|,
+name|int
+name|value3
+parameter_list|)
+block|{
+return|return
+name|Math
+operator|.
+name|min
+argument_list|(
+name|Math
+operator|.
+name|min
+argument_list|(
+name|value1
+argument_list|,
+name|value2
+argument_list|)
+argument_list|,
+name|value3
+argument_list|)
+return|;
 block|}
 DECL|method|verifyHeadroom (FSAppAttempt schedulerApp, int expectedMemory, int expectedCPU)
 specifier|protected
